Updated all .html files and changed styling

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,9 +10,12 @@ body {
 }
 
 body nav {
-  height: 40px;
+  height: 50px;
   background-color: #151515;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
 }
 
 body nav ul {
@@ -21,13 +24,20 @@ body nav ul {
 
 body nav ul li {
   display: inline-block;
-  margin: 0 20px;
-  line-height: 40px;
+  margin: 0 50px;
+  line-height: 50px;
 }
 
 body nav ul li a {
   text-decoration: none;
   color: #f4f4f4;
+  font-weight: 600;
+  -webkit-transition: color 0.15s ease-in;
+  transition: color 0.15s ease-in;
+}
+
+body nav ul li a:hover {
+  color: #64b2f3;
 }
 
 body .main-content {
@@ -35,7 +45,7 @@ body .main-content {
 }
 
 body .main-content .hero {
-  height: 500px;
+  height: 100vh;
   background: #3498db;
   color: #fff;
 }
@@ -49,15 +59,22 @@ body .main-content .hero .hero-text {
           transform: translateY(-50%);
 }
 
-body .main-content .hero .hero-text h1, body .main-content .hero .hero-text h3 {
+body .main-content .hero .hero-text h1 {
   margin-bottom: 25px;
+}
+
+body .main-content .hero .hero-text p {
+  margin-bottom: 40px;
+  font-size: 17px;
+  font-weight: 500;
 }
 
 body .main-content .hero .hero-text a {
   text-decoration: none;
   color: #fff;
   font-weight: 600;
-  padding: 12px 20px;
+  padding: 14px 20px;
+  border-radius: 2px;
   display: inline-block;
   background-color: #fff;
   color: #3498db;
@@ -77,6 +94,16 @@ body .main-content .portfolio-section {
 body .main-content .portfolio-section h2 {
   color: #3498db;
   margin-bottom: 40px;
+  font-size: 30px;
+}
+
+body .main-content .portfolio-section h2:after {
+  content: "";
+  display: block;
+  margin: 30px auto;
+  width: 40px;
+  height: 4px;
+  background: #3498db;
 }
 
 body .main-content .portfolio-section .grid {
@@ -85,15 +112,19 @@ body .main-content .portfolio-section .grid {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 body .main-content .portfolio-section .grid .card {
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
-  padding: 20px;
+  padding: 40px;
   border-radius: 8px;
   -webkit-box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.3);
           box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.3);
+  color: #444;
+  margin: 10px;
 }
 
 body .main-content .portfolio-section .grid .card img {
