--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,16 @@
     <div class="hero">
         <div class="hero-text">
             <h1>Mini Repository</h1>
-            <h3>My name is Nuno and I am a full stack web developer experienced with HTML, CSS, Javascript, PHP, and MySql.
+            <p>My name is Nuno and I am a full stack web developer experienced with HTML, CSS, Javascript, PHP, and MySql.
                 Though I have experience in software development with Python I haven't used it much for web development.
                 This is my journey into Flask :)
-            </h3>
-            <a href="">Find more</a>
+            </p>
+            <a href="#portfolio">Find more</a>
         </div>
         
     </div>
-    
+    <div id="portfolio"></div>
     <div class="portfolio-section">
-        
         <h2>Applications</h2>
         
         <div class="grid">
@@ -34,14 +33,14 @@
             </div>
             <div class="card">
                 <img src="https://via.placeholder.com/200">
-                <h3>Task Master</h3>
-                <p>Simple application to keep track of your todos</p>
+                <h3>Gender Classifer</h3>
+                <p>Supervised machine learning algorithm to classify gender</p>
                 <a href="" class="card-button">View</a>
             </div>
             <div class="card">
                 <img src="https://via.placeholder.com/200">
-                <h3>Task Master</h3>
-                <p>Simple application to keep track of your todos</p>
+                <h3>Bokeh Dashboard</h3>
+                <p>Data visualization dashboard with Bokeh library</p>
                 <a href="" class="card-button">View</a>
             </div>
         </div>
