--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -1,6 +1,7 @@
 $nav-color: #151515;
 $nav-text-color: #f4f4f4;
 $blue: #3498db;
+$light-blue: #64b2f3;
 
 * {
     padding: 0;
@@ -12,21 +13,30 @@ body {
     font-family: 'Montserrat', sans-serif;
 
     nav {
-        height: 40px;
+        height: 50px;
         background-color: $nav-color;
         text-align: center;
+        position: fixed;
+        width: 100%;
+        z-index: 999;
 
         ul {
             list-style: none;
 
             li {
                 display: inline-block;
-                margin: 0 20px;
-                line-height: 40px;
+                margin: 0 50px;
+                line-height: 50px;
 
                 a {
                     text-decoration: none;
                     color: $nav-text-color;
+                    font-weight: 600;
+                    transition: color 0.15s ease-in;
+
+                    &:hover {
+                        color: $light-blue;
+                    }
                 }
             }
         }
@@ -36,7 +46,7 @@ body {
         text-align: center;
         
         .hero {
-            height: 500px;
+            height: 100vh;
             background: #3498db;
             color: #fff;
 
@@ -46,15 +56,23 @@ body {
                 position: relative;
                 top: 50%;
                 transform: translateY(-50%);
-                h1, h3 {
+
+                h1 {
                     margin-bottom: 25px;
+                }
+
+                p {
+                    margin-bottom: 40px;
+                    font-size: 17px;
+                    font-weight: 500;
                 }
 
                 a {
                     text-decoration: none;
                     color: #fff;
                     font-weight: 600;
-                    padding: 12px 20px;
+                    padding: 14px 20px;
+                    border-radius: 2px;
                     display: inline-block;
                     background-color: #fff;
                     color: $blue;
@@ -76,17 +94,30 @@ body {
             h2 {
                 color: $blue;
                 margin-bottom: 40px;
+                font-size: 30px;
+
+                &:after {
+                    content: "";
+                    display: block;
+                    margin: 30px auto;
+                    width: 40px;
+                    height: 4px;
+                    background: $blue;
+                }
             }
 
             .grid {
                 display: flex;
                 justify-content: space-around;
+                flex-wrap: wrap;
 
                 .card {
                     flex-basis: 30%;
-                    padding: 20px;
+                    padding: 40px;
                     border-radius: 8px;
                     box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.3);
+                    color: #444;
+                    margin: 10px;
 
                     img {
                         margin-bottom: 30px;
@@ -110,7 +141,7 @@ body {
                         transition: background 0.2s ease-in-out;
 
                         &:hover {
-                            background: #64b2f3;
+                            background: $light-blue;
                         }
                     }
                 }
