--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">Portfolio</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
