--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -147,6 +147,61 @@ body {
                 }
             }
         }
+
+        .contact-section {
+            background-color: #f4f6f9;
+            padding: 50px 25px;
+            color: #444;
+
+            h2 {
+                margin-bottom: 20px;
+            }
+
+            .form-container {
+                //background: #fff;
+                form {
+                   // box-shadow: 0 0 5px 2px rgba(0,0,0,0.3);    
+                    //background: #fff;
+                    max-width: 450px;
+                    margin: 0 auto;
+                    input, textarea {
+                        display: block;
+                        padding: 10px;
+                        width: 100%;
+                        margin: 10px 0;
+                    }
+
+                    textarea {
+                        height: 150px;
+                    }
+
+                    button {
+                        background: $blue;
+                        //padding: 15px;
+                        width: 100%;
+                        padding: 15px;
+                        font-size: 17px;
+                        cursor: pointer;
+                        border: none;
+                        color: #fff;
+                    }
+
+                }
+                
+
+                
+            }
+            /*.contacts {
+                box-shadow: 0 0 5px 2px rgba(0,0,0,0.3);
+                background: #fff;
+                padding: 30px;
+                width: 450px;
+                border-radius: 5px;
+                margin: 0 auto;
+                margin-top: 40px;
+            }*/
+        }
+
     }
 
     footer {
