--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     {% block body %}{% endblock %}
