--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 {% block body %}
 
 <div class="main-content">
-    <div class="hero">
+    <div id="home" class="hero">
         <div class="hero-text">
             <h1>Mini Repository</h1>
             <p>My name is Nuno and I am a full stack web developer experienced with HTML, CSS, Javascript, PHP, and MySql.
@@ -26,7 +26,7 @@
         
         <div class="grid">
             <div class="card">
-                <img src="https://via.placeholder.com/200">
+                <img src="../static/tasks.jpg">
                 <h3>Task Master</h3>
                 <p>Simple application to keep track of your todos</p>
                 <a href="" class="card-button">View</a>
@@ -44,6 +44,24 @@
                 <a href="" class="card-button">View</a>
             </div>
         </div>
+    </div>
+
+    <div id="contact" class="contact-section">
+        <h2>Get in touch</h2>
+
+        <div class="form-container">
+            <form action="">
+                <input type="text" name="name" placeholder="Name">
+                <input type="text" name="email" placeholder="Email">
+                <textarea name="" ></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+        <!--<div class="contacts">
+            <p>Email: nuno@email.com</p>
+            <p>Github: github.com/nunogaiopereira</p>
+        </div>-->
+        
     </div>
     <!--
 	{% if tasks|length < 1 %}
